force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__ApplicantId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantId__c</fullName>
    <label>Applicant</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>