force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__ApplicationNameText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationNameText__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationNameText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>