force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationType__c</fullName>
    <label>Application Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>