force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__BusinessAccountNameId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessAccountNameId__c</fullName>
    <label>Business Account Name</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessAccountNameId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>