force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__IsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSubmitted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>