force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__rel_1719817702779_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817702779_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SavedApplicationReference_BusinessAc_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>SavedApplicationReference_BusinessAc_rel</relationshipLabel>
    <relationshipName>rel_1719817702779_end</relationshipName>
    <type>Lookup</type>
</CustomField>