force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__rel_1719819538018_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819538018_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SavedApplicationReference_ProgramTer_rel</label>
    <referenceTo>ssot__ProgramTermApplicationTimeline__dlm</referenceTo>
    <relationshipLabel>SavedApplicationReference_ProgramTer_rel</relationshipLabel>
    <relationshipName>rel_1719819538018_end</relationshipName>
    <type>Lookup</type>
</CustomField>