force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__rel_1720291143279_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291143279_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SavedApplicationReference_ApplicantI_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>SavedApplicationReference_ApplicantI_rel</relationshipLabel>
    <relationshipName>rel_1720291143279_end</relationshipName>
    <type>Lookup</type>
</CustomField>