force-app/main/default/objects/ssot__SavedApplicationReference__dlm/fields/ssot__SavedApplicationUrl__c.field-meta.xml
<CustomField>
    <fullName>ssot__SavedApplicationUrl__c</fullName>
    <label>Saved Application URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SavedApplicationUrl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>